Fix some spacing issues

--- a/public/talent.css
+++ b/public/talent.css
@@ -1,6 +1,6 @@
 .card.talent .card-text-container {
-    top: 730px;
-    height: 211px;
+    top: 719px;
+    height: 216px;
 }
 
 .card.talent .header {
@@ -14,5 +14,5 @@
 }
 
 .card.talent .divider {
-    top: 665px;
+    top: 654px;
 }
