--- a/public/training.css
+++ b/public/training.css
@@ -1,6 +1,6 @@
 .card.training .card-text-container {
     top: 545px;
-    height: 398px;
+    height: 390px;
 }
 
 .card.training .header {
